--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,8 +20,7 @@ jobs:
 
      - name: Install dependencies
        run:
-         pip install -r requirements.txt
-         pip install pytest httpx
+         pip install -r requirements.txt && pip install pytest httpx
 
      - name: Run Tests
        run: pytest
