Fix invalid docker tag name

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -47,4 +47,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository }}:latest                 
+          tags: ghcr.io/buddhisankalana/house-price-api:latest                 
